@@ -2,3 +2,4 @@ bar.1*
 Bar.pm
 bar.png
 perllocal.pod
+preferences
