@@ -1,3 +1,5 @@
+etc/apt/preferences.d
+etc/apt
 bin/foo
 mnt/foo
 tmp/foo
