@@ -30,6 +30,9 @@ E: files-foo-in-bar: non-standard-dir-in-var var/foo/
 E: files-foo-in-bar: non-standard-toplevel-dir emul/
 E: files-foo-in-bar: package-contains-thumbnails-dir usr/share/doc/files-foo-in-bar/.thumbnails/
 E: files-foo-in-bar: package-contains-xvpics-dir usr/share/doc/files-foo-in-bar/.xvpics/
+E: files-foo-in-bar: package-install-apt-preferences etc/apt/preferences
+E: files-foo-in-bar: package-install-apt-preferences etc/apt/preferences.d/
+E: files-foo-in-bar: package-install-apt-preferences etc/apt/preferences.d/bar
 E: files-foo-in-bar: package-installs-file-to-usr-x11r6 usr/X11R6/
 E: files-foo-in-bar: package-installs-file-to-usr-x11r6 usr/X11R6/bin/
 E: files-foo-in-bar: package-installs-file-to-usr-x11r6 usr/X11R6/bin/bar
